Bugfix & Updates - leichten Textschatten hinzugefügt (schärfere Schrift) - eigenes Dropdown für Filterbox entwickelt - HiddenRardsBox mindestBreite und Overflow ergänzt - HTML.Box speichert nun wieder die Boxmaße - Globale Variable für Inventar hinzugefügt - Infobox: --- Gildengefechte => Kämpfe werden ausgegeben, Provinzübername wird ausgegeben --- Level-Up: => Berechnet die erhaltenen FPs und gibt sie mit aus

--- a/js/web/hidden-rewards/css/hidden-rewards.css
+++ b/js/web/hidden-rewards/css/hidden-rewards.css
@@ -1,14 +1,20 @@
 #HiddenRewardBox {
     top: 30%;
     left: 30px;
+}
+
+#HiddenRewardBox #HiddenRewardBoxBody {
 	max-height: 400px;
+	min-width: 350px;
+	overflow: hidden;
+	overflow-y: auto;
 }
 
 #HiddenRewardBox table td.incident {
     display: inline-block;
     background-size: 50px 35px;
     background-repeat: no-repeat;
-    width: 100px;
+    width: 70px;
     height: 30px;
 }
 
